2013-05-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Add a VERBOSE property.
	* man/xml-source/ampgsql.8.xml: Document VERBOSE property.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/ps.m4: use one AC_MSG_RESULT.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/json.m4: Improve check for perl module.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/element-glue.c: Add debugging statement.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Do not confess if device not available.
	* perl/Amanda/Taper/Worker.pm: Fix device_errors.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fix data_host memory handling.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.c: Memory leak.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/cmdfile.c: Memory leak.

2013-05-15  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/ampgsql.8.xml: Add disklist example.

2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsuntar.pl: Remove perl warning.

2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Check return value of system calls.
	* oldrecover-src/extract_list.c: Check return value of system calls.
	* oldrecover-src/amrecover.c: Call dbrename after config is set.

2013-05-13  Jean-Louis Martineau <martineau@zmanda.com>
	* gnulib/*, config/gnulib/*: upgrade gnulib to
	  3fe906e98202a591a6a14010aec1538adfd821b6.

2013-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Add that both flush-threshold-dumped
	  and flush-threshold-scheduled must be met.

2013-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm (make_plan): Handle latest_fulls.
	* server-src/amvault.pl: Add --latest-fulls option, pass latest_fulls