@@ -1,4 +1,7 @@
 2013-05-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amidxtaped.pl: untaint input variable.
+
+2013-05-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/ampgsql.pl: Add a VERBOSE property.
 	* man/xml-source/ampgsql.8.xml: Document VERBOSE property.
 
